@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2008-07-08 Warren L. DeLano <warren@delsci.com>
+
+	* fixed order-of-operations bug with implicit OR in selections
+	
 2008-07-06 Warren L. DeLano <warren@delsci.com>
 
 	* fixed alignment/superposition crash bug
